# disk_check

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
tests/: disk_check_tests.rs
